--- a/challenge3/webapp/sample/Gemfile
+++ b/challenge3/webapp/sample/Gemfile
@@ -6,6 +6,9 @@ gem 'rails', '4.0.0'
 # Use postgresql as the database for Active Record
 gem 'pg'
 
+# Use angular.js for creating interactive user interface
+gem "angular-gem", '~> 1.2.1'
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
 
