Rename my sample directory and add a original one

--- a/challenge3/webapp/sungho_arai/Gemfile
+++ b/challenge3/webapp/sungho_arai/Gemfile
@@ -6,6 +6,12 @@ gem 'rails', '4.0.0'
 # Use postgresql as the database for Active Record
 gem 'pg'
 
+# Use angular.js for creating interactive user interface
+gem 'angularjs-rails'
+gem "angularjs-rails-resource", '~>0.2.3'
+# TODO(sungho.arai): The following gem may be removed
+gem "angular-gem", '~> 1.2.1'
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
 
@@ -46,3 +52,5 @@ end
 
 # Use heroku
 gem 'rails_12factor', group: :production
+
+gem 'therubyracer'
