--- a/challenge3/webapp/sungho_arai/Gemfile
+++ b/challenge3/webapp/sungho_arai/Gemfile
@@ -54,3 +54,8 @@ end
 gem 'rails_12factor', group: :production
 
 gem 'therubyracer'
+
+# Use RSpec
+group :development, :test do
+  gem 'rspec-rails'
+end
