add capistrano config files

--- a/challenge3/webapp/levelfour/Gemfile
+++ b/challenge3/webapp/levelfour/Gemfile
@@ -50,3 +50,10 @@ gem 'bootbox-rails', '~>0.3'
 gem 'kaminari'
 gem 'lazy_high_charts'
 gem 'mathjax-rails'
+
+group :deployment do
+  gem 'capistrano', '~> 3.2.1'
+  gem 'capistrano-rails'
+  gem 'capistrano-rbenv'
+  gem 'capistrano-bundler'
+end
