--- a/challenge4/webapp/sakuma/Gemfile
+++ b/challenge4/webapp/sakuma/Gemfile
@@ -11,8 +11,14 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'uglifier', '>= 1.3.0'
 
 group :development, :test do
-  gem 'byebug'
-  gem 'web-console', '~> 2.0'
+  gem 'fuubar'
+  gem 'guard-rspec'
+  gem 'pry-byebug'
+  gem 'pry-rails'
+  gem 'quiet_assets'
+  gem 'rspec-rails'
   gem 'spring'
+  gem 'terminal-notifier-guard'
+  gem 'web-console', '~> 2.0'
 end
 
