--- a/challenge3/webapp/deme0607/config/database.yml
+++ b/challenge3/webapp/deme0607/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: deme0607_development
+  database: edsc_challenge3_deme0607_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: deme0607_test
+  database: edsc_challenge3_deme0607_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: deme0607_production
+  database: edsc_challenge3_deme0607_production
   username: deme0607
   password: <%= ENV['DEME0607_DATABASE_PASSWORD'] %>
