--- a/challenge4/webapp/toshimaru/Gemfile
+++ b/challenge4/webapp/toshimaru/Gemfile
@@ -3,6 +3,7 @@ source 'https://rubygems.org'
 gem 'rails', '>= 5.0.0.beta2', '< 5.1'
 # Use Puma as the app server
 gem 'puma'
+gem 'sqlite3'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.0'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
@@ -11,6 +12,7 @@ gem 'puma'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rspec-rails'
 end
 
 group :development do
