--- a/challenge4/webapp/toshimaru/Gemfile
+++ b/challenge4/webapp/toshimaru/Gemfile
@@ -18,6 +18,7 @@ end
 group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+  gem 'pry-rails'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
