--- a/challenge4/webapp/toshimaru/Gemfile
+++ b/challenge4/webapp/toshimaru/Gemfile
@@ -11,6 +11,7 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
   gem 'rspec-rails'
+  gem 'simplecov'
 end
 
 group :development do
