--- a/challenge3/webapp/matsumoto/config/database.yml
+++ b/challenge3/webapp/matsumoto/config/database.yml
@@ -1,25 +1,22 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: 5
-  timeout: 5000
+  username: root
+  password:
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: matsumoto_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: matsumoto_test
+
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: matsumoto_production
+  username: matsumoto
+  password: <%= ENV['PRODUCTION_DB_PASSWORD'] %>
