--- a/challenge3/webapp/matsumoto/Gemfile
+++ b/challenge3/webapp/matsumoto/Gemfile
@@ -58,3 +58,8 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+# slim
+gem "slim-rails"
+
+gem "rails-controller-testing"
