add highchart gem

--- a/challenge3/webapp/matsumoto/Gemfile
+++ b/challenge3/webapp/matsumoto/Gemfile
@@ -63,3 +63,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 # slim
 gem "slim-rails"
 
+# drawgraph
+gem 'lazy_high_charts'
