--- a/challenge3/webapp/yuichi_moriya/Gemfile
+++ b/challenge3/webapp/yuichi_moriya/Gemfile
@@ -51,3 +51,8 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+# 本番環境設定(heroku)
+group :production do
+  gem 'pg', '0.21.0'
+end
