--- a/challenge3/webapp/m_murotani/chart_example/config/database.yml
+++ b/challenge3/webapp/m_murotani/chart_example/config/database.yml
@@ -52,6 +52,5 @@ test:
 production:
   <<: *default
   database: chart_example_production
-  database: heroku_bf4bb435da33fe1
-  username: b6ea43bdff65fc
+  username: <%= ENV['DATABASE_USER'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
