DBコネクション設定追加

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,11 +11,13 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_bin
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
-  socket: /tmp/mysql.sock
+  password: 
+  host: localhost
 
 development:
   <<: *default
