--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,10 @@ development:
   <<: *default
   database: hello-energy_development
 
+staging:
+  <<: *default
+  database: hello-energy_staging
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
