--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,5 +17,7 @@ AllCops:
     - "log/**/*"
     - "node_modules/**/*"
     - "public/**/*"
+    - "spec/rails_helper.rb"
+    - "spec/spec_helper.rb"
     - "tmp/**/*"
     - "vendor/**/*"
