--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,3 +21,6 @@ AllCops:
     - "spec/spec_helper.rb"
     - "tmp/**/*"
     - "vendor/**/*"
+
+Layout/SpaceInsideBlockBraces:
+  SpaceBeforeBlockParameters: true
