--- a/challenge3/webapp/minojiro/Gemfile
+++ b/challenge3/webapp/minojiro/Gemfile
@@ -26,6 +26,7 @@ gem 'jbuilder', '~> 2.5'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
+gem 'gon'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
