--- a/challenge3/webapp/hiroaki_terayama/Gemfile
+++ b/challenge3/webapp/hiroaki_terayama/Gemfile
@@ -15,6 +15,7 @@ gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
 gem 'activerecord-import'
 gem 'foreman'
+gem 'bulma-rails'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
