テーブルを追加

--- a/challenge3/webapp/hiroaki_terayama/config/database.yml
+++ b/challenge3/webapp/hiroaki_terayama/config/database.yml
@@ -80,6 +80,4 @@ test:
 #
 production:
   <<: *default
-  database: hiroaki_terayama_production
-  username: hiroaki_terayama
-  password: <%= ENV['HIROAKI_TERAYAMA_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
