--- a/challenge3/webapp/hiroaki_terayama/Gemfile
+++ b/challenge3/webapp/hiroaki_terayama/Gemfile
@@ -6,7 +6,7 @@ ruby '2.6.1'
 gem 'rails', '~> 5.2.2'
 gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 3.11'
-gem 'sass-rails', '~> 5.0'
+gem 'sassc-rails'
 gem 'uglifier', '>= 1.3.0'
 gem 'webpacker'
 gem 'turbolinks', '~> 5'
