Add kaminari to use pagination

--- a/challenge3/webapp/ryuta_t/Gemfile
+++ b/challenge3/webapp/ryuta_t/Gemfile
@@ -35,7 +35,12 @@ gem 'jbuilder', '~> 2.5'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
+
+# Use chart.js to create Chart
 gem 'chart-js-rails'
+
+# Use kaminari for paginate
+gem 'kaminari'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
