--- a/challenge3/webapp/serizawa/test/fixtures/houses.yml
+++ b/challenge3/webapp/serizawa/test/fixtures/houses.yml
@@ -2,9 +2,9 @@
 
 one:
   id: 1
-  firstname: kohei
-  lastname: serizawa
-  city: city1
+  firstname: yamada
+  lastname: taro
+  city: "London"
   num_of_people: 1
   has_child: "No"
 
@@ -12,6 +12,6 @@ two:
   id: 2
   firstname: firstname2
   lastname: lastname2
-  city: city2
+  city: "London"
   num_of_people: 2
   has_child: "Yes"
