Install sassc-rails

--- a/challenge3/webapp/hirokishirai/Gemfile
+++ b/challenge3/webapp/hirokishirai/Gemfile
@@ -9,8 +9,8 @@ gem 'rails', '~> 6.0.0.beta3'
 gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
 gem 'puma', '~> 3.11'
-# Use SCSS for stylesheets
-gem 'sass-rails', '~> 5.0'
+# Use SCSS for stylesheets(with C lang implementation)
+gem 'sassc-rails'
 # Transpile app-like JavaScript. Read more: https://github.com/rails/webpacker
 gem 'webpacker', '>= 4.0.0.rc.3'
 # Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
