use slim. for i in app/views/**/*.erb; do erb2slim app/views/layouts/mailer.text.erb app/views/layouts/mailer.text.slim && rm app/views/layouts/mailer.text.erb; done https://github.com/slim-template/html2slim

--- a/challenge3/webapp/hirokishirai/Gemfile
+++ b/challenge3/webapp/hirokishirai/Gemfile
@@ -9,6 +9,8 @@ gem 'rails', '~> 6.0.0.beta3'
 gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
 gem 'puma', '~> 3.11'
+# Use Slim
+gem 'slim-rails'
 # Use SCSS for stylesheets(with C lang implementation)
 gem 'sassc-rails'
 # Transpile app-like JavaScript. Read more: https://github.com/rails/webpacker
