--- a/challenge3/webapp/hirokishirai/Gemfile
+++ b/challenge3/webapp/hirokishirai/Gemfile
@@ -26,6 +26,8 @@ gem 'jbuilder', '~> 2.5'
 # Use Active Model has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
+# For Calculate Median
+gem 'active_median'
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
 
