--- a/challenge3/webapp/osamu_takiya/Gemfile
+++ b/challenge3/webapp/osamu_takiya/Gemfile
@@ -1,3 +1,5 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
@@ -5,46 +7,46 @@ ruby '2.5.5'
 gem 'rails', '~> 5.2.2', '>= 5.2.2.1'
 
 # TODO: バージョン指定をしていないものはする
-gem 'unicorn', '~> 5.5.0'
-gem 'sassc-rails', '~> 2.1.0'
-gem 'uglifier', '>= 1.3.0'
-gem 'turbolinks', '~> 5'
 gem 'bootsnap', '>= 1.1.0', require: false
-gem 'dotenv-rails', '~> 2.7.1'
-gem 'slim-rails'
-gem 'gon'
 gem 'bugsnag'
+gem 'dotenv-rails', '~> 2.7.1'
+gem 'gon'
+gem 'sassc-rails', '~> 2.1.0'
+gem 'slim-rails'
+gem 'turbolinks', '~> 5'
+gem 'uglifier', '>= 1.3.0'
+gem 'unicorn', '~> 5.5.0'
 
 group :development, :test do
+  gem 'awesome_print'
   gem 'better_errors'
   gem 'binding_of_caller'
-  gem 'pry-rails'
+  gem 'byebug'
   gem 'pry-byebug'
   gem 'pry-coolline'
   gem 'pry-doc'
-  gem 'byebug'
-  gem 'awesome_print'
+  gem 'pry-rails'
 end
 
 group :development do
-  gem 'erd'
   gem 'brakeman'
-  gem 'rubocop-rails_config', '~> 0.4.3'
-  gem 'web-console', '>= 3.3.0'
-  gem 'listen', '>= 3.0.5', '< 3.2'
-  gem 'spring'
-  gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'capistrano-bundler'
   gem 'capistrano-rails', '~> 1.4.0'
   gem 'capistrano-rails-console', require: false
-  gem 'capistrano-bundler'
   gem 'capistrano-rbenv'
-  gem 'capistrano3-unicorn'
   gem 'capistrano-yarn'
+  gem 'capistrano3-unicorn'
+  gem 'erd'
+  gem 'listen', '>= 3.0.5', '< 3.2'
+  gem 'rubocop-rails_config', '~> 0.4.3'
+  gem 'spring'
+  gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'web-console', '>= 3.3.0'
 end
 
 group :test do
   gem 'capybara', '>= 2.15'
-  gem 'selenium-webdriver'
   gem 'chromedriver-helper'
   gem 'factory_bot_rails'
+  gem 'selenium-webdriver'
 end
