--- a/challenge3/webapp/osamu_takiya/Gemfile
+++ b/challenge3/webapp/osamu_takiya/Gemfile
@@ -11,6 +11,7 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'bugsnag'
 gem 'dotenv-rails', '~> 2.7.1'
 gem 'gon'
+gem 'mysql2'
 gem 'sassc-rails', '~> 2.1.0'
 gem 'slim-rails'
 gem 'turbolinks', '~> 5'
