--- a/challenge3/webapp/osamu_takiya/config/database.yml
+++ b/challenge3/webapp/osamu_takiya/config/database.yml
@@ -1,25 +1,16 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: mysql2
+  host: localhost
+  username: enechange
 
 development:
   <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+  database: enechange_development
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: enechange_production
+
+test:
+  <<: *default
+  database: enechange_test
