--- a/challenge3/webapp/osamu_takiya/Gemfile
+++ b/challenge3/webapp/osamu_takiya/Gemfile
@@ -19,6 +19,8 @@ gem 'uglifier', '>= 1.3.0'
 gem 'unicorn', '~> 5.5.0'
 
 group :development, :test do
+  gem 'rspec-rails'
+  gem 'factory_bot_rails'
   gem 'awesome_print'
   gem 'better_errors'
   gem 'binding_of_caller'
@@ -48,6 +50,5 @@ end
 group :test do
   gem 'capybara', '>= 2.15'
   gem 'chromedriver-helper'
-  gem 'factory_bot_rails'
   gem 'selenium-webdriver'
 end
