refactoring-some-config (#8)

--- a/challenge3/webapp/osamu_takiya/.env.sample
+++ b/challenge3/webapp/osamu_takiya/.env.sample
@@ -1,8 +1,8 @@
 # unicorn
 UNICORN_LISTEN="8080"
-UNICORN_PID=""
-UNICORN_STDERR_PATH="log/unicorn.production.stderr.log"
-UNICORN_STDOUT_PATH="log/unicorn.production.stdout.log"
+UNICORN_PID="tmp/unicorn.pid"
+UNICORN_STDERR_PATH="log/unicorn.stderr.log"
+UNICORN_STDOUT_PATH="log/unicorn.stdout.log"
 
 # Capistrano
 CAPISTRANO_REPO_URL="https://github.com/"
