--- a/challenge3/webapp/osamu_takiya/embulk/energy_production_datasets_production.yml
+++ b/challenge3/webapp/osamu_takiya/embulk/energy_production_datasets_production.yml
@@ -27,7 +27,7 @@ filters:
     columns:
       ID: id
       Label: label
-      House: house
+      House: house_dataset_id
       Year: year
       Month: month
       Temperature: temperature
