--- a/challenge3/webapp/toshikiokabe/Gemfile
+++ b/challenge3/webapp/toshikiokabe/Gemfile
@@ -23,6 +23,7 @@ group :development, :test do
 end
 
 group :development do
+  gem 'erb2haml'
   gem 'listen', '>= 3.0.5', '< 3.2'
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
