--- a/challenge3/webapp/toshikiokabe/package.json
+++ b/challenge3/webapp/toshikiokabe/package.json
@@ -2,7 +2,9 @@
   "name": "toshikiokabe",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.2"
+    "@rails/webpacker": "^4.0.2",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
