--- a/challenge3/webapp/toshikiokabe/Gemfile
+++ b/challenge3/webapp/toshikiokabe/Gemfile
@@ -10,6 +10,7 @@ gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 
 gem 'coffee-rails', '~> 4.2'
+gem 'gon'
 gem 'haml-rails'
 gem 'jbuilder', '~> 2.5'
 gem 'webpacker'
