--- a/challenge3/webapp/toshikiokabe/package.json
+++ b/challenge3/webapp/toshikiokabe/package.json
@@ -9,6 +9,9 @@
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
+    "tslint": "^5.14.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-loader": "^3.5.4",
     "webpack-dev-server": "^3.2.1"
   }
 }
