--- a/challenge3/webapp/ryuta_t/Gemfile
+++ b/challenge3/webapp/ryuta_t/Gemfile
@@ -29,6 +29,7 @@ gem 'chart-js-rails'
 
 # Use kaminari for paginate
 gem 'kaminari'
+gem 'gon'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
