refactoring-based-on-reviews
https://github.com/corselia/EnergyDataSimulationChallenge/pull/15

--- a/challenge3/webapp/osamu_takiya/.rubocop.yml
+++ b/challenge3/webapp/osamu_takiya/.rubocop.yml
@@ -19,6 +19,9 @@ Style/BracesAroundHashParameters:
 Layout/TrailingBlankLines:
   Enabled: false # 有効にした場合、コメントが最終行だとどんな設定にしてても怒られるため無効にする
 
+Layout/MultilineMethodCallIndentation:
+  Enabled: false # メソッドチェーンの書き方によってはインデントが深くなってしまうために無効に
+
 Style/AsciiComments:
   Enabled: false
 
