--- a/challenge3/webapp/smatsuda/edsc-c3/Gemfile
+++ b/challenge3/webapp/smatsuda/edsc-c3/Gemfile
@@ -35,6 +35,10 @@ gem 'jbuilder', '~> 2.5'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
+gem 'chart-js-rails'
+gem 'gon'
+gem 'statsample'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
