--- a/challenge3/webapp/windyakin/Gemfile
+++ b/challenge3/webapp/windyakin/Gemfile
@@ -1,8 +1,6 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.6.2'
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.3'
 # Use mysql as the database for Active Record
@@ -31,6 +29,8 @@ gem 'jbuilder', '~> 2.5'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
+
+gem 'therubyracer', platforms: :ruby 
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
