:gem: Add devtools gems
- pry
- dotenv-rails
- annotate

--- a/challenge3/webapp/windyakin/Gemfile
+++ b/challenge3/webapp/windyakin/Gemfile
@@ -35,6 +35,10 @@ gem 'therubyracer', platforms: :ruby
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'dotenv-rails'
+  gem 'pry-rails'
+  gem 'pry-byebug'
+  gem 'annotate'
 end
 
 group :development do
