--- a/challenge3/webapp/windyakin/Gemfile
+++ b/challenge3/webapp/windyakin/Gemfile
@@ -30,7 +30,9 @@ gem 'jbuilder', '~> 2.5'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
-gem 'therubyracer', platforms: :ruby 
+gem 'therubyracer', platforms: :ruby
+gem 'activerecord-import'
+gem 'lambda_driver'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
