--- a/challenge3/webapp/windyakin/Makefile
+++ b/challenge3/webapp/windyakin/Makefile
@@ -4,7 +4,7 @@ dev:
 	docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d
 
 migrate_reset:
-	docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm app rails db:migrate:reset
+	docker-compose -f docker-compose.yml -f docker-compose.dev.yml run --rm app rails db:migrate:reset db:seed
 
 down:
 	docker-compose down
