--- a/challenge3/webapp/windyakin/Gemfile
+++ b/challenge3/webapp/windyakin/Gemfile
@@ -33,6 +33,7 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'therubyracer', platforms: :ruby
 gem 'activerecord-import'
 gem 'lambda_driver'
+gem 'gon'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
