Insert CSV data into Postgres by using activerecord-import

--- a/challenge3/webapp/kei_fujikawa/Gemfile
+++ b/challenge3/webapp/kei_fujikawa/Gemfile
@@ -22,6 +22,7 @@ gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.5'
+gem 'activerecord-import'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
