Calculate Statistical Value

--- a/challenge3/webapp/kei_fujikawa/Gemfile
+++ b/challenge3/webapp/kei_fujikawa/Gemfile
@@ -23,6 +23,8 @@ gem 'turbolinks', '~> 5'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.5'
 gem 'activerecord-import'
+gem 'slim-rails'
+gem 'html2slim'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
