--- a/challenge3/webapp/th5o/Gemfile
+++ b/challenge3/webapp/th5o/Gemfile
@@ -45,8 +45,8 @@ group :test do
   # Adds support for Capybara system testing and selenium driver
   gem 'capybara', '>= 2.15'
   gem 'selenium-webdriver'
-  # Easy installation and use of chromedriver to run system tests with Chrome
-  gem 'chromedriver-helper'
+  # Keep your Selenium WebDrivers updated automatically
+  gem 'webdrivers', '~> 3.8.0'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
