--- a/challenge3/webapp/th5o/package.json
+++ b/challenge3/webapp/th5o/package.json
@@ -1,5 +1,10 @@
 {
   "name": "sample",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "^4.0.2"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.3.1"
+  }
 }
