--- a/challenge3/webapp/th5o/package.json
+++ b/challenge3/webapp/th5o/package.json
@@ -2,7 +2,8 @@
   "name": "sample",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.2"
+    "@rails/webpacker": "^4.0.2",
+    "c3": "^0.7.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
