add gems slim & bootstrap

--- a/challenge3/webapp/yomiyama/Gemfile
+++ b/challenge3/webapp/yomiyama/Gemfile
@@ -26,10 +26,11 @@ gem 'jbuilder', '~> 2.5'
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-
+gem 'slim-rails'
+gem 'html2slim'
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
-
+gem 'bootstrap'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
