--- a/challenge3/webapp/yomiyama/Gemfile
+++ b/challenge3/webapp/yomiyama/Gemfile
@@ -28,6 +28,7 @@ gem 'jbuilder', '~> 2.5'
 # gem 'bcrypt', '~> 3.1.7'
 gem 'slim-rails'
 gem 'html2slim'
+gem 'chart-js-rails'
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
 gem 'bootstrap'
