--- a/challenge3/webapp/caesaris/package.json
+++ b/challenge3/webapp/caesaris/package.json
@@ -6,7 +6,10 @@
     "watch": "bundle exec ./bin/webpack-dev-server --watch --colors --progress"
   },
   "dependencies": {
-    "@rails/webpacker": "^4.0.7"
+    "@rails/webpacker": "^4.0.7",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.1"
