--- a/challenge3/webapp/caesaris/Gemfile
+++ b/challenge3/webapp/caesaris/Gemfile
@@ -20,7 +20,8 @@ gem 'uglifier', '>= 1.3.0'
 gem 'slim-rails'
 
 gem 'graphql'
-gem 'graphiql-rails'
+
+gem 'ransack'
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
