--- a/challenge3/webapp/caesaris/Gemfile
+++ b/challenge3/webapp/caesaris/Gemfile
@@ -73,7 +73,7 @@ group :test do
   gem 'rspec'
   gem 'rspec-rails'
   gem 'simplecov'
-  gem 'database_cleaner'
+  # gem 'database_cleaner'
   gem 'timecop'
   gem 'spring-commands-rspec'
 end
