--- a/challenge3/webapp/caesaris/.gitignore
+++ b/challenge3/webapp/caesaris/.gitignore
@@ -33,3 +33,15 @@
 yarn-debug.log*
 .yarn-integrity
 coverage/
+
+# Built from admin
+public/img/
+public/js/
+public/css/
+public/fonts/
+public/favicon.*
+public/robots.txt
+public/index.html
+public/manifest.json
+public/service-worker.js
+public/precache-manifest.*
