--- a/challenge3/webapp/caesaris/config/settings.yml
+++ b/challenge3/webapp/caesaris/config/settings.yml
@@ -8,9 +8,9 @@ default: &default
 
   default_user:
     show: true
-    name: Admin
     email: admin@example.com
     password: admin2019
+    img_url_tmp: https://api.adorable.io/avatars/150/<@email@>.png
 
 development:
   <<: *default
@@ -20,6 +20,5 @@ production:
   <<: *default
   default_user:
     show: <%= ENV['SHOW_DEFAULT_USER'] %>
-    name: <%= ENV['DEFAULT_USER_NAME'] || 'Admin' %>
     email: <%= ENV['DEFAULT_USER_EMAIL'] %>
     password: <%= ENV['DEFAULT_USER_PASSWORD'] %>
