--- a/challenge3/webapp/caesaris/config/settings.yml
+++ b/challenge3/webapp/caesaris/config/settings.yml
@@ -22,3 +22,4 @@ production:
     show: <%= ENV['SHOW_DEFAULT_USER'] %>
     email: <%= ENV['DEFAULT_USER_EMAIL'] %>
     password: <%= ENV['DEFAULT_USER_PASSWORD'] %>
+    img_url_tmp: https://api.adorable.io/avatars/150/<@email@>.png
