update docker settings

--- a/challenge3/webapp/caesaris/Dockerfile
+++ b/challenge3/webapp/caesaris/Dockerfile
@@ -20,10 +20,10 @@ ENV VUE_APP_NAME ${VUE_APP_NAME}
 
 ARG RAILS_ENV
 ENV RAILS_ENV ${RAILS_ENV}
-ARG RAILS_MASTER_KEY
-ENV RAILS_MASTER_KEY ${RAILS_MASTER_KEY}
-# ARG SECRET_KEY_BASE
-# ENV SECRET_KEY_BASE ${SECRET_KEY_BASE}
+# ARG RAILS_MASTER_KEY
+# ENV RAILS_MASTER_KEY ${RAILS_MASTER_KEY}
+ARG SECRET_KEY_BASE
+ENV SECRET_KEY_BASE ${SECRET_KEY_BASE}
 ARG POSTGRES_PASSWORD
 ENV POSTGRES_PASSWORD ${POSTGRES_PASSWORD}
 
