--- a/challenge3/webapp/caesaris/docker-compose.yml
+++ b/challenge3/webapp/caesaris/docker-compose.yml
@@ -13,7 +13,8 @@ services:
         # NODE_ENV: ${NODE_ENV}
         DEFAULT_USER_EMAIL: ${DEFAULT_USER_EMAIL}
         DEFAULT_USER_EMAIL: ${DEFAULT_USER_PASSWORD}
-        RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+        # RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+        SECRET_KEY_BASE: ${SECRET_KEY_BASE}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
         VUE_APP_NAME: ${VUE_APP_NAME}
     env_file:
