update docker settings

--- a/challenge3/webapp/caesaris/config/database.yml
+++ b/challenge3/webapp/caesaris/config/database.yml
@@ -82,5 +82,5 @@ production:
   <<: *default
   host: db
   database: caesaris_production
-  username: postgres
+  username: <%= ENV['POSTGRES_USERNAME'] || 'postgres' %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
