--- a/challenge3/webapp/caesaris/.dockerignore
+++ b/challenge3/webapp/caesaris/.dockerignore
@@ -9,6 +9,11 @@ public/packs-test
 config/master.key
 .env
 
+log/
+tmp/
+vendor/admin/node_modules/
+vendor/admin/yarn-error.log
+
 # Built from admin
 public/img/
 public/js/
