--- a/challenge3/webapp/caesaris/.env
+++ b/challenge3/webapp/caesaris/.env
@@ -4,11 +4,11 @@ RAILS_ENV=production
 NODE_ENV=production
 
 # SHOW_DEFAULT_USER=1
-DEFAULT_USER_EMAIL=admin@example.org
+DEFAULT_USER_EMAIL=admin@example.com
 DEFAULT_USER_PASSWORD=admin2019
 
 # use `bundle exec rake secret` to generate one
-# SECRET_KEY_BASE=XXXXXXXXXXXXXXX
+SECRET_KEY_BASE=XXXXXXXXXXXXXXX
 POSTGRES_PASSWORD=XXXXXXXXXXXXXXX
 
 VUE_APP_NAME=Iuliana Challenges
