--- a/challenge3/webapp/yukaina/Gemfile
+++ b/challenge3/webapp/yukaina/Gemfile
@@ -41,8 +41,16 @@ group :development do
   # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
   gem 'web-console', '>= 3.3.0'
   gem 'listen', '>= 3.0.5', '< 3.2'
+  gem 'onkcop', require: false
+  gem 'rubocop-rails'
+  gem 'pry-rails'
+  gem 'rack-mini-profiler', require: false
+  gem 'better_errors'
+  gem 'binding_of_caller'
+  gem 'brakeman'
+  gem 'bullet'
+  gem 'rails_best_practices'
 end
-
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
