--- a/challenge3/webapp/caesaris/Gemfile
+++ b/challenge3/webapp/caesaris/Gemfile
@@ -30,6 +30,7 @@ gem 'devise'
 gem 'devise-jwt', '~> 0.5.9'
 
 gem 'easy_settings'
+gem "rails-settings-cached", "~> 2.0"
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
