--- a/challenge3/webapp/yukaina/Gemfile
+++ b/challenge3/webapp/yukaina/Gemfile
@@ -41,7 +41,9 @@ group :development do
   # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
   gem 'web-console', '>= 3.3.0'
   gem 'listen', '>= 3.0.5', '< 3.2'
-  gem 'onkcop', require: false
+  # Ignored `Layout/IndentArray` and `Layout/IndentHash`
+  # https://github.com/onk/onkcop/pull/62
+  gem 'onkcop', require: false, git: 'https://github.com/sue445/onkcop' , branch: 'rubocop_0.68.0'
   gem 'rubocop-rails'
   gem 'pry-rails'
   gem 'rack-mini-profiler', require: false
