add rspec-rails, factory_bot_rails, rails generate rspec:install

--- a/challenge3/webapp/yukaina/Gemfile
+++ b/challenge3/webapp/yukaina/Gemfile
@@ -54,3 +54,8 @@ group :development do
   gem 'bullet'
   gem 'rails_best_practices'
 end
+
+group :development, :test do
+  gem 'rspec-rails'
+  gem "factory_bot_rails"
+end
