3.Show 1 or 2 types of charts of the data.
- add gems
  - c3-rails
  - d3-rails

--- a/challenge3/webapp/yukaina/Gemfile
+++ b/challenge3/webapp/yukaina/Gemfile
@@ -32,6 +32,9 @@ gem 'jbuilder', '~> 2.5'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
+gem 'c3-rails'
+gem 'd3-rails', '~> 3.5.17'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
