--- a/challenge3/webapp/yukaina/Gemfile
+++ b/challenge3/webapp/yukaina/Gemfile
@@ -56,6 +56,7 @@ group :development do
   gem 'brakeman'
   gem 'bullet'
   gem 'rails_best_practices'
+  gem 'rails-erd'
 end
 
 group :development, :test do
