--- a/challenge3/webapp/yukaina/.rubocop.yml
+++ b/challenge3/webapp/yukaina/.rubocop.yml
@@ -7,3 +7,17 @@ inherit_gem:
 
 AllCops:
   TargetRubyVersion: 2.6
+  Include:
+    - '**/*.rb'
+    - '**/*.gemfile'
+    - '**/*.gemspec'
+    - '**/*.rake'
+  Exclude:
+    - 'db/**/*'
+    - 'config/**/*'
+    - 'script/**/*'
+    - 'spec/rails_helper.rb'
+    - 'spec/spec_helper.rb'
+    - 'bin/*'
+    - 'vendor/**/*'
+    - !ruby/regexp /old_and_unused\.rb$/
