--- a/challenge3/webapp/caesaris/Gemfile
+++ b/challenge3/webapp/caesaris/Gemfile
@@ -1,3 +1,5 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
@@ -21,16 +23,16 @@ gem 'slim-rails'
 
 gem 'graphql'
 
-gem 'ransack'
 gem 'kaminari'
+gem 'ransack'
 
-gem "letter_opener", :group => :development
+gem 'letter_opener', group: :development
 
 gem 'devise'
 gem 'devise-jwt', '~> 0.5.9'
 
 gem 'easy_settings'
-gem "rails-settings-cached", "~> 2.0"
+gem 'rails-settings-cached', '~> 2.0'
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
@@ -54,22 +56,23 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'byebug', platforms: %i[mri mingw x64_mingw]
 end
 
 group :development do
   # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
-  gem 'web-console', '>= 3.3.0'
   gem 'listen', '>= 3.0.5', '< 3.2'
+  gem 'web-console', '>= 3.3.0'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+  gem 'rubocop', '~> 0.72.0', require: false
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
 end
 
 group :development, :test, :staging do
-  gem 'pry-rails'
-  gem 'pry-doc'
   gem 'pry-byebug'
+  gem 'pry-doc'
+  gem 'pry-rails'
   gem 'pry-stack_explorer'
 end
 
@@ -82,12 +85,12 @@ group :test do
   gem 'rspec'
   gem 'rspec-rails'
   gem 'simplecov'
-  gem 'timecop'
   gem 'spring-commands-rspec'
+  gem 'timecop'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
 
 gem 'graphiql-rails'
 gem 'rack-cors'
