rubocop --auto-correct double_quotes

--- a/challenge3/webapp/caesaris/.rubocop.yml
+++ b/challenge3/webapp/caesaris/.rubocop.yml
@@ -5,6 +5,8 @@ AllCops:
   Exclude:
     - 'db/**/*'
     - 'bin/*'
+    - 'config/environment.rb'
+    - 'config/boot.rb'
     - 'config/environments/*'
     - 'config/application.rb'
     - 'config/initializers/*'
