--- a/challenge3/webapp/caesaris/.rubocop_todo.yml
+++ b/challenge3/webapp/caesaris/.rubocop_todo.yml
@@ -354,8 +354,8 @@ Style/RescueStandardError:
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, ConsistentQuotesInMultiline.
 # SupportedStyles: single_quotes, double_quotes
-Style/StringLiterals:
-  Enabled: false
+# Style/StringLiterals:
+#   Enabled: false
 
 # Offense count: 2
 # Cop supports --auto-correct.
