--- a/challenge3/webapp/msaito/Gemfile
+++ b/challenge3/webapp/msaito/Gemfile
@@ -32,6 +32,7 @@ gem 'jbuilder', '~> 2.5'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+gem 'chart-js-rails', '~> 0.1.4'
 gem 'bootstrap', '~> 4.1.1'
 gem 'jquery-rails'
 # Reduces boot times through caching; required in config/boot.rb
