--- a/challenge3/webapp/msaito/package.json
+++ b/challenge3/webapp/msaito/package.json
@@ -1,5 +1,9 @@
 {
   "name": "msaito",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "dependencies": {
+      "chart.js": "^2.7.1"
+     }
+  }
 }
