--- a/challenge3/webapp/msaito/Gemfile
+++ b/challenge3/webapp/msaito/Gemfile
@@ -35,6 +35,7 @@ gem 'jbuilder', '~> 2.5'
 gem 'chart-js-rails', '~> 0.1.4'
 gem 'bootstrap', '~> 4.1.1'
 gem 'jquery-rails'
+gem 'kaminari'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
