--- a/challenge3/webapp/tasukujp/config/database.yml
+++ b/challenge3/webapp/tasukujp/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: tasukujp_development
+  database: enechange_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: tasukujp_test
+  database: enechange_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,4 @@ test:
 #
 production:
   <<: *default
-  database: tasukujp_production
-  username: tasukujp
-  password: <%= ENV['TASUKUJP_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
