--- a/challenge3/webapp/mori/Gemfile
+++ b/challenge3/webapp/mori/Gemfile
@@ -61,5 +61,10 @@ group :test do
   gem 'chromedriver-helper'
 end
 
+group :production do
+  gem 'pg'
+end
+
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
