--- a/challenge3/webapp/mori/config/database.yml
+++ b/challenge3/webapp/mori/config/database.yml
@@ -49,6 +49,9 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: mori_production
   username: mori
   password: <%= ENV['MORI_DATABASE_PASSWORD'] %>
