add and fix files for rubocpo

--- a/challenge3/webapp/yukio_ugajin/.rubocop.yml
+++ b/challenge3/webapp/yukio_ugajin/.rubocop.yml
@@ -4,8 +4,9 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   TargetRubyVersion: 2.5.5
   Exclude:
-    - "vendor/**/*" # rubocop config/default.yml
+    - "vendor/**/*" 
     - "db/schema.rb"
+    - bin/bundle
   DisplayCopNames: true
   Include:
     - rubocop-rails
