--- a/challenge3/webapp/yukio_ugajin/Gemfile
+++ b/challenge3/webapp/yukio_ugajin/Gemfile
@@ -31,6 +31,9 @@ group :development, :test do
   gem 'sqlite3', '~> 1.4'
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'rspec-rails'
+  gem 'factory_bot_rails'
+  gem 'rails-controller-testing'
 end
 
 group :development do
