WIP - house data dynamic change

--- a/challenge3/webapp/takuya_kikuchi/Gemfile
+++ b/challenge3/webapp/takuya_kikuchi/Gemfile
@@ -30,7 +30,7 @@ gem 'bootsnap', '>= 1.4.2', require: false
 
 # Added additionally
 gem 'chart-js-rails'
-gem 'gon', '~> 6.3', '>= 6.3.2'
+# gem 'gon', '~> 6.3', '>= 6.3.2'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
